--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.13.4",
     "body-parser": "^1.15.1",
     "request": "^2.72.0",
-    "scores-parser": "^3.0.0"
+    "scores-parser": "^3.0.0",
+    "caniuse-api": "^1.5.0"
   },
   "devDependencies": {},
   "scripts": {
